Número de chutes aumentado

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,20 +1,37 @@
 {
     "cSpell.words": [
         "Acertou",
+        "Aleatorio",
         "campo",
         "chute",
+        "descobriu",
+        "Elementos",
         "entre",
         "Escolha",
+        "Escolhido",
         "exibir",
         "Female",
+        "gerar",
+        "Inicial",
         "Jogo",
+        "Limite",
+        "limpar",
         "lista",
+        "maior",
+        "menor",
+        "mensagem",
         "número",
+        "palavra",
         "Portuguese",
+        "quantidade",
+        "reiniciar",
         "responsive",
         "secreto",
         "Tela",
+        "tentativa",
         "tentativas",
-        "texto"
+        "texto",
+        "verificar",
+        "Você"
     ]
 }
